tests/baselines/reference/moduleResolutionWithExtensions_withPaths.errors.txt
/tsconfig.json(6,3): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.
/tsconfig.json(7,23): error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== /tsconfig.json (2 errors) ====
    {
    	"compilerOptions": {
    		"outDir": "lib",
    		"target": "ES6",
    		"module": "ES6",
    		"baseUrl": "/",
    		~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
    		"moduleResolution": "Node",
    		                    ~~~~~~
!!! error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107:   Visit https://aka.ms/ts6 for migration information.
    		"noImplicitAny": true,
    		"traceResolution": true,
    		"paths": {
    			"foo/*": ["node_modules/foo/lib/*"]
    		}
    	}
    }
    
==== /relative.d.ts (0 errors) ====
    export declare function relative(): void;
    
    
==== /test.ts (0 errors) ====
    import { test } from "foo/test.js";
    import { test as test2 } from "foo/test";
    import { relative } from "./relative.js";
    import { relative as relative2 } from "./relative";
    
    
    
==== /node_modules/foo/lib/test.js (0 errors) ====
    export function test() {
    	console.log("test");
    }
    
==== /node_modules/foo/lib/test.d.ts (0 errors) ====
    export declare function test(): void;
    
==== /relative.js (0 errors) ====
    export function relative() {
    	console.log("test");
    }
    